chore: Update Makefile to use correct directory for cmake command

--- a/specific-makefiles/build-in-libs/Makefile
+++ b/specific-makefiles/build-in-libs/Makefile
@@ -5,6 +5,7 @@
 all: build
 	
 srpm:
+	pwd
 	cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DUSE_CPM=1
 	cd build; cpack -G RPM --config CPackSourceConfig.cmake
 
