--- a/specific-makefiles/build-in-libs/Makefile
+++ b/specific-makefiles/build-in-libs/Makefile
@@ -2,8 +2,10 @@
 # Makefile
 
 # Set up the default target - all, and specify what it should do
-all: build
+all: 
+	touch ../../USE_CPM
 	
+
 srpm:
 	pwd
 	cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DUSE_CPM=1
