--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -31,7 +31,11 @@ srpm:
 	echo `ls $$BUILD_DIR`; \
 	for rpmfile in `ls $$CURRENT_DIR/filestorm-*.src.rpm`; do \
 		echo $$rpmfile; \
-		cp $$rpmfile $(outdir); \
+		RPM_FILE_NAME=$$(basename $$rpmfile); \
+		if echo $$CURRENT_DIR | grep -q $$SUBDIR; then \
+			RPM_FILE_NAME=$$(echo $$RPM_FILE_NAME | sed 's/filestorm-/filestorm-build-in-libs-/g'); \
+		fi \
+		cp $$CURRENT_DIR/$$rpmfile $(outdir)/$$RPM_FILE_NAME ; \
 	done
 
 .PHONY: clean
