Update Makefile to fix file copying issue

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -35,6 +35,7 @@ srpm:
 		if echo $$CURRENT_DIR | grep -q $$SUBDIR; then \
 			RPM_FILE_NAME=$$(echo $$RPM_FILE_NAME | sed 's/filestorm-/filestorm-build-in-libs-/g'); \
 		fi; \
+		echo $$RPM_FILE_NAME; \
 		cp $$rpmfile $(outdir)/$$RPM_FILE_NAME; \
 	done
 
