--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -31,12 +31,7 @@ srpm:
 	echo `ls $$BUILD_DIR`; \
 	for rpmfile in `ls $$CURRENT_DIR/filestorm-*.src.rpm`; do \
 		echo $$rpmfile; \
-		RPM_FILE_NAME=$$(basename $$rpmfile); \
-		if echo $$CURRENT_DIR | grep -q $$SUBDIR; then \
-			RPM_FILE_NAME=$$(echo $$RPM_FILE_NAME | sed 's/filestorm-/filestorm-build-in-libs-/g'); \
-		fi; \
-		echo $$RPM_FILE_NAME; \
-		cp $$rpmfile $(outdir)/$$RPM_FILE_NAME; \
+		cp $$rpmfile $(outdir); \
 	done
 
 .PHONY: clean
