Update Makefile to use correct directory for cmake command

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -20,10 +20,10 @@ srpm:
 	mkdir -p $$BUILD_DIR; \
 	make -C $$ROOT_DIR; \
 	VERSION_STRING=$$(cat $$BUILD_DIR/.version); \
-	sed -i 's/\$${PROJECT_VERSION}/'$$VERSION_STRING'/g' $(CMAKELISTS_FILE); \
-	sed -i '/include(cmake\/DynamicVersion\.cmake)/d' $(CMAKELISTS_FILE); \
-	sed -i '/dynamic_version(PROJECT_PREFIX filestorm_)/d' $(CMAKELISTS_FILE); \
-	sed -i 's/cmake_minimum_required(VERSION 3.25)/cmake_minimum_required(VERSION 3.20)/g' $(CMAKELISTS_FILE); \
+	sed -i 's/\$${PROJECT_VERSION}/'$$VERSION_STRING'/g' $$ROOT_DIR/$(CMAKELISTS_FILE); \
+	sed -i '/include(cmake\/DynamicVersion\.cmake)/d' $$ROOT_DIR/$(CMAKELISTS_FILE); \
+	sed -i '/dynamic_version(PROJECT_PREFIX filestorm_)/d' $$ROOT_DIR/$(CMAKELISTS_FILE); \
+	sed -i 's/cmake_minimum_required(VERSION 3.25)/cmake_minimum_required(VERSION 3.20)/g' $$ROOT_DIR/$(CMAKELISTS_FILE); \
 	make -C $$ROOT_DIR clean; \
 	mkdir -p $$BUILD_DIR; \
 	$$CMAKE_COMMAND; \
