--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,5 +147,6 @@ else()
 endif()
 set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
 set(CPACK_RPM_SOURCE_PKG_PACKAGING_INSTALL_PREFIX "/usr")
+set(CPACK_RPM_PACKAGE_RELEASE_DIST ON)
 
 include(CPack)
