chore: Update CPack RPM file name in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,5 +148,5 @@ endif()
 set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
 set(CPACK_RPM_SOURCE_PKG_PACKAGING_INSTALL_PREFIX "/usr")
 set(CPACK_RPM_PACKAGE_RELEASE_DIST ON)
-
+set(CPACK_RPM_FILE_NAME RPM-DEFAULT)
 include(CPack)
