--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -75,7 +75,7 @@ jobs:
   trigger-copr-build:
     needs: [build, tests] 
     runs-on: ubuntu-latest
-    if: success()
+    if: github.event_name == 'push' && success()
     steps:
       - name: Trigger COPR build
         run: |
@@ -84,9 +84,8 @@ jobs:
   trigger-copr-build-in-libs:
     needs: [build, tests] 
     runs-on: ubuntu-latest
-    if: success()
+    if: github.event_name == 'push' && success()
     steps:
       - name: Trigger COPR build
         run: |
           curl -X POST -H 'Content-Type: application/json' ${{ secrets.COPR_WEBHOOK_URL_BUILDIN }}
-      
