--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -73,19 +73,20 @@ jobs:
 
   
   trigger-copr-build:
-    needs: [build, tests] 
+    needs: [build, tests]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && success()
+    if: github.ref == 'refs/heads/master' && success()
     steps:
       - name: Trigger COPR build
         run: |
           curl -X POST -H 'Content-Type: application/json' ${{ secrets.COPR_WEBHOOK_URL }}
-  
+
   trigger-copr-build-in-libs:
     needs: [build, tests] 
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && success()
+    if: github.ref == 'refs/heads/master' && success()
     steps:
       - name: Trigger COPR build
         run: |
           curl -X POST -H 'Content-Type: application/json' ${{ secrets.COPR_WEBHOOK_URL_BUILDIN }}
+          
