--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: install_dependencies
         run: |
-          dnf install -y cmake gcc-c++ make spdlog-devel git cxxopts-devel json-devel
+          dnf install -y cmake gcc-c++ make spdlog-devel git cxxopts-devel json-devel eigen3-devel
 
       - uses: actions/checkout@v4
         with:
