--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,12 +177,13 @@ else()
 endif()
 
 if(ENABLE_LIBAIO)
-  list(APPEND CPACK_RPM_PACKAGE_REQUIRES "libaio")
-  list(APPEND CPACK_RPM_BUILDREQUIRES "libaio-devel")
+  set(CPACK_RPM_PACKAGE_REQUIRES "${CPACK_RPM_PACKAGE_REQUIRES}, libaio")
+  set(CPACK_RPM_BUILDREQUIRES "${CPACK_RPM_BUILDREQUIRES}, libaio-devel")
 endif()
+
 if(ENABLE_IOURING)
-  list(APPEND CPACK_RPM_PACKAGE_REQUIRES "liburing")
-  list(APPEND CPACK_RPM_BUILDREQUIRES "liburing-devel")
+  set(CPACK_RPM_PACKAGE_REQUIRES "${CPACK_RPM_PACKAGE_REQUIRES}, liburing")
+  set(CPACK_RPM_BUILDREQUIRES "${CPACK_RPM_BUILDREQUIRES}, liburing-devel")
 endif()
 
 set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
